<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditRecordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/update_appointment_and_payment_details"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="86dp"
            android:layout_height="68dp"

            android:layout_marginTop="16dp"
            android:padding="2dp"
            android:src="@drawable/ic_action_addphoto"
            android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:autofillHints="image" />

    <EditText
        android:id="@+id/personDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/Appointment_date"
        android:inputType="date"
        android:padding="10dp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/personTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/appointment_time"
        android:inputType="time"
        android:padding="10dp"
        android:autofillHints="time" />

    <EditText
        android:id="@+id/personType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/enter_appointment_type"
        android:inputType="text"
        android:padding="10dp"
        android:autofillHints="type" />

    <EditText
        android:id="@+id/personNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/enter_appointment_notes"
        android:inputType="text"
        android:padding="10dp"
        android:autofillHints="notes" />

    <EditText
        android:id="@+id/personCnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:padding="10dp"
        android:autofillHints="cardNumber" />

    <EditText
        android:id="@+id/personCVC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/enter_cvc"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:autofillHints="cvc" />

    <EditText
        android:id="@+id/personEdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"

        android:background="@drawable/background"
        android:hint="@string/enter_exipire_date"
        android:inputType="date"
        android:padding="10dp"
        android:autofillHints="expiredate" />

    <EditText
        android:id="@+id/personamount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"

        android:background="@drawable/background"
        android:hint="@string/total_amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:autofillHints="amount" />

    <EditText
        android:id="@+id/personpaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/background"
        android:hint="@string/paid_amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:autofillHints="paid" />

        <Button
            android:id="@+id/addInfoBtn"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"

            android:background="@drawable/background"
            android:text="@string/update"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>